force-app/main/default/objects/VCG_CPQ_Pricing_Override__c/VCG_CPQ_Pricing_Override__c.object-meta.xml
<CustomObject>
    <label>VCG CPQ Pricing Override</label>
    <nameField>
        <label>VCG CPQ Pricing Override Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VCG CPQ Pricing Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>