force-app/main/default/objects/VCG_CPQ_Pricing_Override__c/fields/Override_Value__c.field-meta.xml
<CustomField>
    <fullName>Override_Value__c</fullName>
    <label>Override Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>