force-app/main/default/objects/VCG_CPQ_Pricing_Override__c/fields/Override_Value_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Value_Date__c</fullName>
    <label>Override Value Date</label>
    <type>Date</type>
</CustomField>