force-app/main/default/objects/VCG_CPQ_Pricing_Override__c/fields/Override_Value_Str__c.field-meta.xml
<CustomField>
    <fullName>Override_Value_Str__c</fullName>
    <label>Override Value Str</label>
    <length>255</length>
    <type>Text</type>
</CustomField>