force-app/main/default/objects/VCG_CPQ_Pricing_Override__c/fields/Override_Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Override_Value_Type__c</fullName>
    <label>Override Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Currency Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>