force-app/main/default/objects/VCG_CPQ_Pricing_Override__c/fields/Pricing_Procedure_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Procedure_Sequence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Procedure Sequence</label>
    <referenceTo>VCG_CPQ_Pricing_Procedure_Sequence__c</referenceTo>
    <relationshipLabel>Pricing Overrides</relationshipLabel>
    <relationshipName>Pricing_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>