force-app/main/default/objects/VCG_CPQ_Pricing_Override__c/fields/Pricing_Result__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Pricing Result this override overrides. Added primarily to make it easier to get from the override back to the pricing result so we can more easily clear the override.</description>
    <label>Pricing Result</label>
    <referenceTo>VCG_CPQ_Quote_Product_Pricing_Result__c</referenceTo>
    <relationshipLabel>VCG CPQ Pricing Overrides</relationshipLabel>
    <relationshipName>Pricing_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>