force-app/main/default/objects/VCG_CPQ_Pricing_Override__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>VCG_CPQ_Quote__c</referenceTo>
    <relationshipLabel>VCG CPQ Pricing Overrides</relationshipLabel>
    <relationshipName>VCG_CPQ_Pricing_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>